# libfreenect

PCLTest/: CMakeLists.txt  OKPCL.cpp  OKPCLCorral.cpp  pcl_visualizer_demo.cpp
src/: registration.c
wrappers/c_sync/: libfreenect_sync.c
wrappers/cpp/: libfreenect.hpp
wrappers/opencv/: CMakeLists.txt  cvdemo.c
